2022-06-19  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (process_dataset): use
        'read.table(fill = TRUE, ...)' for reading datasets
        (process_dataset): add 'zoo' support for dataset
        "full_xru_d_csv_row.zip"

2022-03-07  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-1

        * R/functions.R (datasets, fetch_dataset): if
        downloads fail, the functions now return NULL

2021-11-20  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R: export functions 'datasets'
        and 'fetch_dataset'; remove "csv" from names as
        apparently not all full datasets are in CSV
        format
        (process_dataset): add support for transforming
        datasets into 'zoo' series
        (datasets): return "filename", "description"
        and date of last "update"

        * README.org: add README
