@@ -16,6 +16,7 @@ fetch_dataset(dest.dir, dataset,
               bis.url = "https://www.bis.org/statistics/",
               exdir = tempdir(),
               return.class = NULL,
+              frequency = NULL,
               \dots)
 datasets(url = "https://www.bis.org/statistics/full_data_sets.htm", \dots)
 
@@ -38,6 +39,9 @@ datasets(url = "https://www.bis.org/statistics/full_data_sets.htm", \dots)
   }
   \item{return.class}{\code{NULL} or character: currently, only
     \code{\link[zoo]{zoo}} is supported
+  }
+  \item{frequency}{
+    string, or nothing (\code{NULL}) 
   }
   \item{\dots}{
     currently not used
